--- a/test/fixtures/plugins/test-plugin/views/pages/test.html
+++ b/test/fixtures/plugins/test-plugin/views/pages/test.html
@@ -2,5 +2,5 @@
 {% block title %}Test{% endblock %}
 
 {% block body %}
-<h1>test {{ var }}</h1>
+<h1>{{ "test %s" | __(var) }}</h1>
 {% endblock %}
